--- a/contador/templates/index.html
+++ b/contador/templates/index.html
@@ -2,16 +2,18 @@
 
 {% block head_title %}Contador{% endblock %}
 
-{% block style_css %}{% endblock %}
+{% block style_css %}<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">{% endblock %}
 
 {% block content %}
+
+<div class="container">
     <h2>Contador</h2>
     <p>{{ session["contador"] }}</p>
 
     <div>
-        <a href="/contador">Click</a>
-        <a href="/destroy_session">Reset</a>
-        <a href="/incrementa_en_dos">Incrementa en dos</a>
+        <a class="btn btn-primary btn-sm" href="/">Click</a>
+        <a class="btn btn-success btn-sm" href="/destroy_session">Reset</a>
     </div>
+</div>
 
 {% endblock %}
